# lala

./: .gitignore  CMakeLists.txt  README.md  lala-grammar-ebnf.txt  lala-grammar.txt  lala-grammar.yaml
codegen/: codegen.py
example/: a.lala  bubble-sort.lala  gcd-and-lcm.lala  primes.lala  stack-cli.lala  stack.lala
lib/ccf/: ccf.h  example.c
lib/cut/: CMakeLists.txt  cut.c  cut.h  example.c  readme.md
lib/debug/: debug.h
lib/dumper/: dumper.h
lib/hashmap/: CMakeLists.txt  hashmap.c  hashmap.h
lib/path/: CMakeLists.txt  path.c  path.h
src/: constant.c  constant.h  heap.c  heap.h  lexer.c  lexer.h  main.c  op_code.c  op_code.h  parser.c  parser.h  scope.c  scope.h  stack.c  stack.h  token.c  token.h  value_type.c  value_type.h  vm.c  vm.h
test/: lexer_test.c  parser_test.c  vm_test.c
